<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013-2014 Scott Warner

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Deployment Tracker</string>
    
    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="add_new">Create New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="show_notification">Show as notification</string>
    <string name="hide_notification">Hide notification</string>
    <string name="send_feedback">Send Feedback</string>
    
    <!-- Display fragment strings -->
    <string name="date_range">%1$s to %2$s</string>
    <string name="date_stats">%1$d days complete, %2$d days left</string>
    
    <plurals name="days_remaining">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    
    <plurals name="days_complete">
        <item quantity="one">%d day complete</item>
        <item quantity="other">%d days complete</item>
    </plurals>
    
    <!-- Notification Strings -->
	<string name="small_notification">%1$d%% - %2$d of %3$d days complete</string>

    <!-- Generic strings -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="info">Info</string>
    <string name="pie">Mmm, pie</string>
    <string name="comma">", "</string>
    <string name="loading">Loading...</string>
    
    <!-- Widget Configuration Strings -->
    <string name="widget_pick">Pick an item to use for the widget</string>
    <string name="text_color">Text Color</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    
    <!-- Create strings -->
    <string name="name">Name: (15 Character Limit)</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="color_completed">Completed color:</string>
    <string name="color_remaining">Remaining color:</string>
    
    <!-- Confirmation Dialog -->
    <string name="confirm">Are you sure?</string>
    <string name="close">Close</string>
    
    <!-- Error Strings -->
    <string name="invalid_name">Please enter a valid name</string>
    <string name="invalid_start">Start date is not before end date!</string>
    <string name="invalid_end">End date is not after start date!</string>
    
    <!-- Info fragment text -->
    <string name="howto_add">To add data, tap on the + icon in the Action Bar.</string>
    
    <!-- Preference Strings -->
    <string name="prefs_display">Display Settings</string>
    <string name="prefs_animate">Enable Animation</string>
    <string name="prefs_animate_summary">Enable animating the circle and main text</string>
    <string name="prefs_main_view">Change Main View</string>
    <string name="prefs_main_view_summary">Choose what to display as the bold text</string>
    <string name="prefs_main_view_default">Percent (Default)</string>
    <string name="prefs_light_theme">Use a light theme</string>
    <string name="prefs_light_theme_summary">May need a restart of the app to apply</string>
    <string name="prefs_customization">Customization</string>
    <string name="prefs_hide_date">Hide Dates</string>
    <string name="prefs_hide_date_summary">Hide all dates, days left, and days completed from being shown</string>
    <string name="prefs_hide_percentage">Hide Percentage</string>
    <string name="prefs_hide_percentage_summary">Hide all percentage from being shown</string>
    <string name="other">Other</string>
    <string name="send_feedback_summary">Open an Email application to send feedback to the developer</string>
    
</resources>
