<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/full_menu_settings"
        android:icon="@drawable/abs__ic_menu_moreoverflow_holo_dark"
        android:showAsAction="always"
        android:title="@string/settings">
        <menu xmlns:android="http://schemas.android.com/apk/res/android" >
            <group android:id="@+id/group_popupmenu" >
                <item
                    android:id="@+id/menu_create_new"
                    android:showAsAction="never"
                    android:title="@string/add_new"
                    />

                <item
                    android:id="@+id/menu_edit"
                    android:showAsAction="never"
                    android:title="@string/edit"
                    />

                <item
                    android:id="@+id/menu_delete"
                    android:showAsAction="never"
                    android:title="@string/delete"
                    />

                <item
                    android:id="@+id/menu_about"
                    android:showAsAction="never"
                    android:title="@string/about"
                    />
            </group>
        </menu>
    </item>

</menu>