<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/name"/>
        
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:inputType="text|textAutoComplete|textAutoCorrect|textCapSentences"
            />
       
        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@drawable/dialog_divider_horizontal_holo_dark" />
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
    
            <Button
                android:id="@+id/button_start"
                style="@style/Widget.Sherlock.ActionButton"
                android:textColor="@android:color/white"
                android:layout_width="0dip"
                android:layout_height="75dip"
                android:layout_weight="0.45"
                android:onClick="onClick"
                android:text="@string/start_date" />
    
            <View
                android:layout_width="2dip"
                android:layout_height="match_parent"
                android:background="@drawable/divider_vertical_holo_dark" />
    
            <Button
                android:id="@+id/button_end"
                style="@style/Widget.Sherlock.ActionButton"
                android:textColor="@android:color/white"
                android:layout_width="0dip"
                android:layout_height="75dip"
                android:layout_weight="0.45"
                android:onClick="onClick"
                android:text="@string/end_date"
                android:enabled="false" />
        </LinearLayout>
    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2dip"
	        android:background="@drawable/dialog_divider_horizontal_holo_dark"
	        android:paddingBottom="5dip" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Completed color:" />
	        
	    <com.larswerkman.colorpicker.ColorPicker
		    android:id="@+id/picker_completed"
		    android:layout_width="match_parent"
		    android:layout_height="200dip"
		    android:gravity="center" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Remaining color:" />
	        
	    <com.larswerkman.colorpicker.ColorPicker
		    android:id="@+id/picker_remain"
		    android:layout_width="match_parent"
		    android:layout_height="200dip"
		    android:gravity="center" />
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2dip"
	        android:background="@drawable/dialog_divider_horizontal_holo_dark"
	        android:paddingBottom="5dip" />
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
    
            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.Sherlock.ActionButton"
                android:textColor="@android:color/white"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:onClick="onClick"
                android:text="@string/cancel" />

            <View
                android:layout_width="2dip"
                android:layout_height="match_parent"
                android:background="@drawable/divider_vertical_holo_dark" />
    
            <Button
                android:id="@+id/button_save"
                style="@style/Widget.Sherlock.ActionButton"
                android:textColor="@android:color/white"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:onClick="onClick"
                android:text="@string/save"
                android:enabled="false" />
        </LinearLayout>
        
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2dip"
	        android:background="@drawable/dialog_divider_horizontal_holo_dark"
	        android:paddingBottom="5dip" />
    
    </LinearLayout>
</ScrollView>
