<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013-2014 Scott Warner

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/widget_pick" />

    <com.viewpagerindicator.TitlePageIndicator
        android:id="@+id/indicator"
        android:padding="2dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@drawable/dialog_divider_horizontal_holo_dark"
        android:paddingBottom="5dip" />
    
       <Button
           android:id="@+id/button_text"
           style="@style/Widget.Sherlock.ActionButton"
           android:textColor="@android:color/white"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:onClick="onClick"
           android:text="@string/text_light" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@drawable/dialog_divider_horizontal_holo_dark"
        android:paddingBottom="5dip" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <Button
           android:id="@+id/button_cancel"
           style="@style/Widget.Sherlock.ActionButton"
           android:textColor="@android:color/white"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.45"
           android:onClick="onClick"
           android:text="@string/cancel" />

       <View
           android:layout_width="2dip"
           android:layout_height="match_parent"
           android:background="@drawable/divider_vertical_holo_dark" />

       <Button
           android:id="@+id/button_save"
           style="@style/Widget.Sherlock.ActionButton"
           android:textColor="@android:color/white"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="0.45"
           android:onClick="onClick"
           android:text="@string/save" />

   </LinearLayout>

</LinearLayout>
